products testimonials added for mobile, added bug on products where drop down was behind the image

--- a/themes/linc-edge/sass/_header.scss
+++ b/themes/linc-edge/sass/_header.scss
@@ -12,6 +12,7 @@
 }
 
 .menu-navigation {
+  z-index:999;
   height: 100%;
   position: relative;
   ul.menu {
